# skillshare-dl

./: .gitignore  LICENSE  README.md  pyproject.toml
src/skillshare_dl/: cli.py  main.py
