[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillshare_dl"
version = "0.0.3"
description = "A cli tool for downloading Skillshare lesson videos"
readme = "README.md"
requires-python = ">=3.10"
license = { text = 'MIT' }
authors = [{ name = "Wayde Gilliam", email = "waydegilliam@gmail.com" }]
keywords = ["python", "skillshare"]
dependencies = ["httpx", "tqdm", "beautifulsoup4"]

[project.optional-dependencies]
dev = ["black", "isort"]

[project.scripts]
skillshare-dl = "skillshare_dl.cli:main"

[project.urls]
Homepage = "https://github.com/waydegg/skillshare-dl"
Source = "https://github.com/waydegg/skillshare-dl"
